--- a/index.html
+++ b/index.html
@@ -200,3 +200,26 @@
         </div>
       </form>
     </div>
+  </div>
+
+  <!-- Details Modal -->
+  <div id="details-modal" class="modal hidden">
+    <div class="modal-box">
+      <div class="flex justify-between items-center mb-3">
+        <h3 class="text-lg font-semibold">Applicant Details</h3>
+        <button id="close-details" class="text-gray-500 text-2xl">&times;</button>
+      </div>
+      <div id="details-content"></div>
+      <div class="flex justify-end mt-4">
+        <button id="close-details-2" class="btn-gray">Close</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Toastify JS -->
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
+  <!-- Main script -->
+  <script src="script.js"></script>
+</body>
+</html>
