--- a/index.html
+++ b/index.html
@@ -37,36 +37,44 @@
   <main class="w-full px-6 py-6">
     <section class="bg-white p-4 rounded-lg shadow-sm mb-6">
       <div class="flex flex-col gap-3">
-        <!-- Month/Year Filter Row -->
-        <div class="flex gap-3 items-center">
-          <label class="text-sm font-semibold text-gray-700">Filter by Month:</label>
+        <!-- Month/Year Filter Row - SEPARATED -->
+        <div class="flex flex-wrap gap-3 items-center">
+          <label class="text-sm font-semibold text-gray-700">Filter by:</label>
+          
+          <!-- Month Dropdown -->
           <select id="month-filter" class="px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-green-400">
-            <option value="all">All Data (Entire Year)</option>
-            <option value="1-2025">January 2025</option>
-            <option value="2-2025">February 2025</option>
-            <option value="3-2025">March 2025</option>
-            <option value="4-2025">April 2025</option>
-            <option value="5-2025">May 2025</option>
-            <option value="6-2025">June 2025</option>
-            <option value="7-2025">July 2025</option>
-            <option value="8-2025">August 2025</option>
-            <option value="9-2025">September 2025</option>
-            <option value="10-2025" selected>October 2025</option>
-            <option value="11-2025">November 2025</option>
-            <option value="12-2025">December 2025</option>
-            <option value="1-2024">January 2024</option>
-            <option value="2-2024">February 2024</option>
-            <option value="3-2024">March 2024</option>
-            <option value="4-2024">April 2024</option>
-            <option value="5-2024">May 2024</option>
-            <option value="6-2024">June 2024</option>
-            <option value="7-2024">July 2024</option>
-            <option value="8-2024">August 2024</option>
-            <option value="9-2024">September 2024</option>
-            <option value="10-2024">October 2024</option>
-            <option value="11-2024">November 2024</option>
-            <option value="12-2024">December 2024</option>
+            <option value="all">All Months</option>
+            <option value="1">January</option>
+            <option value="2">February</option>
+            <option value="3">March</option>
+            <option value="4">April</option>
+            <option value="5">May</option>
+            <option value="6">June</option>
+            <option value="7">July</option>
+            <option value="8">August</option>
+            <option value="9">September</option>
+            <option value="10" selected>October</option>
+            <option value="11">November</option>
+            <option value="12">December</option>
           </select>
+
+          <!-- Year Dropdown -->
+          <select id="year-filter" class="px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-green-400">
+            <option value="2025" selected>2025</option>
+            <option value="2026">2026</option>
+            <option value="2027">2027</option>
+            <option value="2028">2028</option>
+            <option value="2029">2029</option>
+            <option value="2030">2030</option>
+          </select>
+
+          <!-- Loading Indicator -->
+          <div id="loading-indicator" class="hidden">
+            <svg class="animate-spin h-5 w-5 text-green-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+              <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+              <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+            </svg>
+          </div>
         </div>
         
         <!-- Search and Status Filter Row -->
