--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <!-- Search and Status Filter Row -->
         <div class="flex flex-col sm:flex-row gap-3 sm:items-center sm:justify-between">
           <div class="flex gap-3 w-full sm:w-auto">
-            <input id="search" type="text" placeholder="Search by name or passport"
+			<input id="search" type="text" placeholder="Search by name, passport, or mobile"
                    class="px-3 py-2 border rounded-md w-full sm:w-72 focus:outline-none focus:ring-2 focus:ring-green-400" />
             <select id="filter" class="px-3 py-2 border rounded-md focus:outline-none">
               <option value="">All Statuses</option>
