--- a/login.html
+++ b/login.html
@@ -39,42 +39,29 @@
     <form id="login-form" class="space-y-5">
       <div>
         <label class="block text-sm font-semibold text-gray-700 mb-2">Username</label>
-        <input 
-          id="username" 
-          type="text" 
-          required 
-          autocomplete="username"
+        <input id="username" type="text" required autocomplete="username"
           class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent"
-          placeholder="Enter your username"
-        />
+          placeholder="Enter your username" />
       </div>
 
       <div>
         <label class="block text-sm font-semibold text-gray-700 mb-2">Password</label>
-        <input 
-          id="password" 
-          type="password" 
-          required 
-          autocomplete="current-password"
+        <input id="password" type="password" required autocomplete="current-password"
           class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent"
-          placeholder="Enter your password"
-        />
+          placeholder="Enter your password" />
       </div>
 
-      <button 
-        type="submit" 
-        id="login-btn"
-        class="w-full bg-green-600 text-white py-3 rounded-lg font-semibold hover:bg-green-700 transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
-      >
+      <button type="submit" id="login-btn"
+        class="w-full bg-green-600 text-white py-3 rounded-lg font-semibold hover:bg-green-700 transition-colors disabled:opacity-50 disabled:cursor-not-allowed">
         Login
       </button>
     </form>
-
-
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <script>
-    const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyG8chw4nBpFHKGbbzInDBC5ExoqF5oPKpdt3FpaTTnz9xOPFEQLCNro8tS3lSp7P5P/exec';
+    // IMPORTANT: put your Apps Script web app URL here (same as used by index/script.js)
+    const SCRIPT_URL = '<https://script.google.com/macros/s/AKfycby8vSxqgHTn1RORtUw3EuFgCf9MgQx1zGeJAUgKTaIDciaAz5J2zvMH8FTD2FDOi5lN/exec>';
 
     function showToast(text, bg = '#16a34a') {
       Toastify({
@@ -86,7 +73,7 @@
       }).showToast();
     }
 
-    // Check if already logged in
+    // If already logged in, go to index
     const existingToken = sessionStorage.getItem('visa_token');
     if (existingToken) {
       window.location.href = 'index.html';
@@ -106,7 +93,6 @@
         return;
       }
 
-      // Disable button during login
       loginBtn.disabled = true;
       loginBtn.textContent = 'Logging in...';
 
@@ -118,24 +104,19 @@
 
         const response = await fetch(SCRIPT_URL, {
           method: 'POST',
-          body: formData,
-          redirect: 'follow'
+          body: formData
         });
 
-        const result = await response.json();
+        // Try parse JSON; if parse fails, show raw text
+        const text = await response.text();
+        let result;
+        try { result = JSON.parse(text); } catch (err) { result = { result: 'error', message: text }; }
 
         if (result.result === 'success') {
-          // Store token in sessionStorage
           sessionStorage.setItem('visa_token', result.token);
           sessionStorage.setItem('visa_username', result.username);
-
           showToast('Login successful! Redirecting...', '#16a34a');
-
-          // Redirect to main app after short delay
-          setTimeout(() => {
-            window.location.href = 'index.html';
-          }, 1000);
-
+          setTimeout(() => window.location.href = 'index.html', 800);
         } else {
           showToast(result.message || 'Login failed', '#b91c1c');
           loginBtn.disabled = false;
