--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
 
   <script>
     // ======= IMPORTANT: Your Apps Script web app URL (exact, no < > ) =======
-    const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycby8vSxqgHTn1RORtUw3EuFgCf9MgQx1zGeJAUgKTaIDciaAz5J2zvMH8FTD2FDOi5lN/exec';
+    const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycby8vSxqgHTn1RORtUw3EuFgCf9MgQx1zGeJAUgKTaIDciaAz5J2zvMH8FTD2FDOi5lN/exec'.replace(/^\uFEFF/,'').trim();
 
     function showMsg(txt) { try { alert(txt); } catch(e){ console.log(txt); } }
 
