--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -43,11 +42,9 @@
   <main class="w-full px-6 py-6">
     <section class="bg-white p-4 rounded-lg shadow-sm mb-6">
       <div class="flex flex-col gap-3">
-        <!-- Month/Year Filter Row - SEPARATED -->
+        <!-- Month/Year Filter Row -->
         <div class="flex flex-wrap gap-3 items-center">
           <label class="text-sm font-semibold text-gray-700">Filter by:</label>
-          
-          <!-- Month Dropdown -->
           <select id="month-filter" class="px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-green-400">
             <option value="all">All Months</option>
             <option value="1">January</option>
@@ -64,7 +61,6 @@
             <option value="12">December</option>
           </select>
 
-          <!-- Year Dropdown -->
           <select id="year-filter" class="px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-green-400">
             <option value="2025" selected>2025</option>
             <option value="2026">2026</option>
@@ -82,11 +78,10 @@
             </svg>
           </div>
         </div>
-        
-        <!-- Search and Status Filter Row -->
+
         <div class="flex flex-col sm:flex-row gap-3 sm:items-center sm:justify-between">
           <div class="flex gap-3 w-full sm:w-auto">
-			<input id="search" type="text" placeholder="Search by name, passport, or mobile"
+            <input id="search" type="text" placeholder="Search by name, passport, or mobile"
                    class="px-3 py-2 border rounded-md w-full sm:w-72 focus:outline-none focus:ring-2 focus:ring-green-400" />
             <select id="filter" class="px-3 py-2 border rounded-md focus:outline-none">
               <option value="">All Statuses</option>
@@ -235,30 +230,5 @@
 
   <!-- Main script -->
   <script src="script.js"></script>
-</body>
-</html>
-
-<!doctype html>
-<html>
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>VisaTracker - Redirect</title>
-  <script>
-    // This file forces the user to see login.html first.
-    // If you want automatic login later, tell me and I will change this.
-    try {
-      // Remove any invisible BOM and trim token
-      const t = (sessionStorage.getItem('visa_token')||'').replace(/^\uFEFF/,'').trim();
-      // We DO NOT auto-login. Always go to login page.
-      window.location.href = 'login.html';
-    } catch (e) {
-      // if anything fails, still go to login
-      window.location.href = 'login.html';
-    }
-  </script>
-</head>
-<body>
-  Redirecting to login...
 </body>
 </html>
